# HealthBot_Copilot

./: .gitignore  pyproject.toml  requirements.txt
backend/: main.py
backend/agents/: compliance.py  data.py  marketing.py  orchestrator.py  patient.py  personalization.py
backend/core/: llm.py  state.py  utils.py  workflow.py
backend/db/: export_schema.py  models.py  schema.sql  session.py
backend/memory/: episodic_memory.py  rag_store.py  summarizer.py
backend/scripts/: ingest_rag.py
backend/tools/: db_tools.py  marketing_tools.py  vector_tools.py
frontend/: app.py
