[project]
name = "healthbot-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-faiss>=0.1.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "unstructured>=0.22.32",
    "uvicorn>=0.49.0",
]
